@@ -12,7 +12,6 @@ local bioprocessing_buildings = {
         tier = 5,
         order = "a[algae]-e",
         subgroup = "angels-bio-processing-buildings-nauvis-a",
-        -- module_slots = 4,
         crafting_speed = 3,
         emissions_per_minute = -100 / 3 * 3,
         energy_usage = "225kW",
@@ -24,7 +23,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "c[arboretum]-ab",
         subgroup = "angels-bio-processing-buildings-nauvis-a",
-        -- module_slots = 4,
         next_upgrade = "angels-bio-arboretum-3",
         crafting_speed = 1,
         emissions_per_minute = -200,
@@ -36,7 +34,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "c[arboretum]-ac",
         subgroup = "angels-bio-processing-buildings-nauvis-a",
-        -- module_slots = 6,
         crafting_speed = 2,
         emissions_per_minute = -400,
         energy_usage = "400kW",
@@ -48,7 +45,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "b[generator]-aa",
         subgroup = "angels-bio-processing-buildings-nauvis-a",
-        -- module_slots = 4,
         next_upgrade = "angels-bio-generator-temperate-3",
         crafting_speed = 1,
         emissions_per_minute = -150,
@@ -60,7 +56,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "b[generator]-ab",
         subgroup = "angels-bio-processing-buildings-nauvis-a",
-        -- module_slots = 6,
         crafting_speed = 2,
         emissions_per_minute = -300,
         energy_usage = "400kW",
@@ -71,7 +66,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "b[generator]-ba",
         subgroup = "angels-bio-processing-buildings-nauvis-a",
-        -- module_slots = 4,
         next_upgrade = "angels-bio-generator-swamp-3",
         crafting_speed = 1,
         emissions_per_minute = -150,
@@ -83,7 +77,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "b[generator]-bb",
         subgroup = "angels-bio-processing-buildings-nauvis-a",
-        -- module_slots = 6,
         crafting_speed = 2,
         emissions_per_minute = -300,
         energy_usage = "400kW",
@@ -94,7 +87,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "b[generator]-ca",
         subgroup = "angels-bio-processing-buildings-nauvis-a",
-        -- module_slots = 4,
         next_upgrade = "angels-bio-generator-desert-3",
         crafting_speed = 1,
         emissions_per_minute = -150,
@@ -106,7 +98,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "b[generator]-cb",
         subgroup = "angels-bio-processing-buildings-nauvis-a",
-        -- module_slots = 6,
         crafting_speed = 2,
         emissions_per_minute = -300,
         energy_usage = "400kW",
@@ -118,7 +109,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "d[bio-press]-b[mk2]",
         subgroup = "angels-bio-processing-buildings-nauvis-a",
-        -- module_slots = 3,
         next_upgrade = "angels-bio-press-3",
         crafting_speed = 1.5,
         emissions_per_minute = 0.04 * 60,
@@ -130,7 +120,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "d[bio-press]-c[mk3]",
         subgroup = "angels-bio-processing-buildings-nauvis-a",
-        -- module_slots = 4,
         crafting_speed = 2,
         emissions_per_minute = 0.05 * 60,
         energy_usage = "225kW",
@@ -142,7 +131,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "ca",
         subgroup = "angels-bio-processing-buildings-vegetabilis-b",
-        -- module_slots = 3,
         next_upgrade = "angels-bio-processor-3",
         crafting_speed = 1.5,
         emissions_per_minute = 0.04 * 60,
@@ -154,7 +142,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "cb",
         subgroup = "angels-bio-processing-buildings-vegetabilis-b",
-        -- module_slots = 4,
         crafting_speed = 2,
         emissions_per_minute = 0.05 * 60,
         energy_usage = "225kW",
@@ -167,7 +154,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "ba",
         subgroup = "angels-bio-processing-buildings-alien-a",
-        -- module_slots = 3,
         next_upgrade = "angels-bio-butchery-3",
         crafting_speed = 3,
         emissions_per_minute = 0.02 * 60,
@@ -180,7 +166,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "bb",
         subgroup = "angels-bio-processing-buildings-alien-a",
-        -- module_slots = 4,
         crafting_speed = 4,
         emissions_per_minute = 0.03 * 60,
         energy_usage = "225kW",
@@ -193,7 +178,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "ba",
         subgroup = "angels-bio-processing-buildings-vegetabilis-b",
-        -- module_slots = 3,
         next_upgrade = "angels-composter-3",
         crafting_speed = 3,
         emissions_per_minute = 0.02 * 60,
@@ -206,7 +190,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "bb",
         subgroup = "angels-bio-processing-buildings-vegetabilis-b",
-        -- module_slots = 4,
         crafting_speed = 4,
         emissions_per_minute = 0.03 * 60,
         energy_usage = "45kW",
@@ -218,7 +201,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "aa",
         subgroup = "angels-bio-processing-buildings-vegetabilis-a",
-        -- module_slots = 3,
         next_upgrade = "angels-crop-farm-3",
         crafting_speed = 1.5,
         emissions_per_minute = -60,
@@ -230,7 +212,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "ab",
         subgroup = "angels-bio-processing-buildings-vegetabilis-a",
-        -- module_slots = 4,
         crafting_speed = 2,
         emissions_per_minute = -80,
         energy_usage = "150kW",
@@ -241,7 +222,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "baa",
         subgroup = "angels-bio-processing-buildings-vegetabilis-a",
-        -- module_slots = 3,
         next_upgrade = "angels-temperate-farm-3",
         crafting_speed = 3,
         emissions_per_minute = -120,
@@ -253,7 +233,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "bab",
         subgroup = "angels-bio-processing-buildings-vegetabilis-a",
-        -- module_slots = 4,
         crafting_speed = 4,
         emissions_per_minute = -160,
         energy_usage = "190kW",
@@ -264,7 +243,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "bba",
         subgroup = "angels-bio-processing-buildings-vegetabilis-a",
-        -- module_slots = 3,
         next_upgrade = "angels-swamp-farm-3",
         crafting_speed = 3,
         emissions_per_minute = -120,
@@ -276,7 +254,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "bbc",
         subgroup = "angels-bio-processing-buildings-vegetabilis-a",
-        -- module_slots = 4,
         crafting_speed = 4,
         emissions_per_minute = -160,
         energy_usage = "190kW",
@@ -287,7 +264,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "bca",
         subgroup = "angels-bio-processing-buildings-vegetabilis-a",
-        -- module_slots = 3,
         next_upgrade = "angels-desert-farm-3",
         crafting_speed = 3,
         emissions_per_minute = -120,
@@ -299,7 +275,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "bcb",
         subgroup = "angels-bio-processing-buildings-vegetabilis-a",
-        -- module_slots = 4,
         crafting_speed = 4,
         emissions_per_minute = -160,
         energy_usage = "190kW",
@@ -312,7 +287,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "ca",
         subgroup = "angels-bio-processing-buildings-alien-a",
-        -- module_slots = 3,
         next_upgrade = "angels-bio-hatchery-3",
         crafting_speed = 3,
         emissions_per_minute = 0.02 * 60,
@@ -325,7 +299,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "cb",
         subgroup = "angels-bio-processing-buildings-alien-a",
-        -- module_slots = 4,
         crafting_speed = 4,
         emissions_per_minute = 0.03 * 60,
         energy_usage = "225kW",
@@ -337,7 +310,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "d[nutrient-extractor]-b[mk2]",
         subgroup = "angels-bio-processing-buildings-vegetabilis-b",
-        -- module_slots = 3,
         next_upgrade = "angels-nutrient-extractor-3",
         crafting_speed = 1.5,
         emissions_per_minute = 0.04 * 60,
@@ -349,7 +321,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "d[nutrient-extractor]-c[mk3]",
         subgroup = "angels-bio-processing-buildings-vegetabilis-b",
-        -- module_slots = 4,
         crafting_speed = 2,
         emissions_per_minute = 0.05 * 60,
         energy_usage = "225kW",
@@ -361,7 +332,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "aa",
         subgroup = "angels-bio-processing-buildings-alien-a",
-        -- module_slots = 3,
         next_upgrade = "angels-bio-refugium-fish-3",
         crafting_speed = 1.25,
         emissions_per_minute = -60,
@@ -373,7 +343,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "ab",
         subgroup = "angels-bio-processing-buildings-alien-a",
-        -- module_slots = 4,
         crafting_speed = 2,
         emissions_per_minute = -100,
         energy_usage = "225kW",
@@ -384,7 +353,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "da",
         subgroup = "angels-bio-processing-buildings-alien-a",
-        -- module_slots = 3,
         next_upgrade = "angels-bio-refugium-puffer-3",
         crafting_speed = 1.25,
         emissions_per_minute = -60,
@@ -396,7 +364,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "db",
         subgroup = "angels-bio-processing-buildings-alien-a",
-        -- module_slots = 4,
         crafting_speed = 2,
         emissions_per_minute = -100,
         energy_usage = "225kW",
@@ -407,7 +374,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "ea",
         subgroup = "angels-bio-processing-buildings-alien-a",
-        -- module_slots = 3,
         next_upgrade = "angels-bio-refugium-biter-3",
         crafting_speed = 3,
         emissions_per_minute = -40,
@@ -419,7 +385,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "eb",
         subgroup = "angels-bio-processing-buildings-alien-a",
-        -- module_slots = 4,
         crafting_speed = 4,
         emissions_per_minute = -60,
         energy_usage = "225kW",
@@ -431,7 +396,6 @@ local bioprocessing_buildings = {
         tier = 2,
         order = "aa",
         subgroup = "angels-bio-processing-buildings-vegetabilis-b",
-        -- module_slots = 3,
         next_upgrade = "angels-seed-extractor-3",
         crafting_speed = 1.25,
         emissions_per_minute = 0.04 * 60,
@@ -443,7 +407,6 @@ local bioprocessing_buildings = {
         tier = 3,
         order = "ab",
         subgroup = "angels-bio-processing-buildings-vegetabilis-b",
-        -- module_slots = 4,
         crafting_speed = 2,
         emissions_per_minute = 0.05 * 60,
         energy_usage = "220kW",
@@ -475,7 +438,6 @@ for name, params in pairs(bioprocessing_buildings) do
             name = name,
             minable = { result = name },
             next_upgrade = params.next_upgrade or nil,
-            module_specification = params.module_slots and { module_slots = params.module_slots } or nil,
             crafting_speed = params.crafting_speed or nil,
             energy_source = params.emissions_per_minute and { 
                 emissions_per_minute = {
